<resources>
    <string name="app_name">PetFinder</string>
    <string name="type_pet">Type: %1$s</string>
    <string name="breeds_pet">Breeds: %1$s</string>
    <string name="age_pet">Age: %1$s</string>
    <string name="name_pet">Name:%1$s</string>
    <string name="gender_pet">Gender: %1$s</string>
    <string name="size_pet">Size: %1$s</string>
    <string name="tags_pet">Tags: %1$s</string>
    <string name="option_dog">Dog</string>
    <string name="option_cat">Cat</string>
    <string name="option_all_pets">Animal</string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
</resources>